src/App.css
/* ... */
.h1 {
  background-color:#fff;
    overflow:hidden;
    display:inline-block; 
    padding:10px; 
    font-weight:bold;
    

}

span { 
  /* background: url(https://www.fightersgeneration.com/nf7/char/akira-vf5-water-effect.gif 
   ) 20px 20px repeat;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  display:block;
  font-size: 70px;
  flex-wrap: wrap; */
  
  
}




.banner {
  width: 100%;
  height: 60vh;
  /* background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(background2.jpg) ; */
  background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(https://www.fightersgeneration.com/nf7/char/akira-vf5-water-effect.gif);
  /* background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(https://giffiles.alphacoders.com/124/12454.gif); */
  animation: background-fade-in 2s ease-in-out forwards;
  -webkit-transition: background-image 2s ease-in-out;
  transition: background-image 2s ease-in-out;
  /* padding-top: -50%; */
  background-size: cover;
  background-position: center;

  
  
  

}

@keyframes background-fade-in {
  from {
      opacity: 0;
  }
  to {
      opacity: 1;
  }
}


.navbar {
  width: 90%;
  margin: auto;
  /* padding: 10px 20px; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: 'Hanalei Fill';font-size: 22px;
  padding-top: -10px;
  padding-bottom: -10px;
}

.logo {
  width: 120px;
  cursor: pointer;
}

.navbar ul {
  display: flex;
  list-style: none;
  padding-bottom: -10px;
}

/* .navbar li { */
  /* margin-right: 20px; */
/* } */

/* .loginButton, .signupButton {
  background-color: blue;
  color: white;
  padding: 5px 10px;
  border-radius: 5px;
  cursor: pointer;
} */

/* .signupButton, .okButton, .homeButton {
  padding: 10px 20px;
  border: 1px solid #fff;
  border-radius: 25px;
  color: #fff;
  text-decoration: none;
  margin-left: 10px;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
} */

.loginButton, .signupButton, .okButton, .homeButton {
  padding: 10px 20px;
  border: 1px solid #fff;
  border-radius: 25px;
  color: #fff;
  text-decoration: none;
  margin-left: 10px;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  position:relative;
  overflow: hidden;
  width: 100px;
  text-align: center;
  margin: 20px 10px;
  margin-top: auto;
  object-position: center;
}
.loginButton:hover, .signupButton:hover, .okButton .homeButton:hover {
  background-color: #fff;
  /* background-image: url(https://media.tenor.com/Jsyw3sFFPXsAAAAd/call-of-duty-wallpaper.gif); */
  background-image: url(https://i.pinimg.com/originals/c3/ae/8b/c3ae8b679648b7be5101cb3480ea5cfd.gif);
  /* color: #333; */
  box-shadow: 0px 0px 10px #fff;
  transform: scale(1.1);
}
.loginButton:active, .signupButton:active, .okButton .homeButton:active {
  transform: translateY(3px);
}


.navbar ul li ::after {
  content :'';
  height: 3px;
  width: 0%;
  /* background: red; */
  position: absolute;
  left: 0;
  /* bottom: -10px; */
  transition: 0.5s;
}

.navbar ul li :hover::after {
  width: 100%;
  
}

.search {
    text-align: center;
    display: inline-flexbox;
  font-family: 'Hanalei Fill';
  padding: 20px;
}

/* MODAL */



.modalContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 500px;
  height: 500px;
  border-radius: 12px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  display: flex;
  flex-direction: column;
  padding: 25px;
  color: black;
  position: fixed;
  transform: translateX(-750px);
  z-index: 1000;
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 0.4s;
  animation-name: animatetop;
  animation-duration: 0.5s
}

input[type="submit"] {
  padding: 12px 20px;
  margin-top: 20px;
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

input[type="submit"]:hover {
  background-color: #45a049;
}

@-webkit-keyframes animatetop {
  from {top:-200px; opacity:0} 
  to {top:0; opacity:1}
}

@keyframes animatetop {
  from {top:-100px; opacity:0}
  to {top:0; opacity:1}
}


.loginText {
  display: flex;
  align-items: center;
}

.login_label {
  font-size: 18px;
  margin-bottom: 10px;
  margin-top: 20px;
}

.login_input {
  padding: 10px;
  border-radius: 5px;
  border: 1px solid gray;
  width: 50%;
}

.okButton {
  background-color: #5cb85c;
  border-radius: 10px;
  color: white;
  padding: 10px 10px;
  margin-top: 10px;
  border: none;
  cursor: pointer;
}

/* .close {
  position: left;
  right: 20px;
  top: 20px;
  cursor: pointer;
} */

.close {
  color: black;
  position: absolute;
  padding: 10px 20px;
  top: 0;
  left: 0;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
    color: red;
    text-decoration: none;
    cursor: pointer;
}


.purchaseModalContainer{
  transform: none;
  top: 10%; right: 0; left: 0;
  margin: 0 auto;
}

.purchaseModalBackground {
  width: 100vw;
  height: 100vh;
  background-color: rgba(200, 200, 200);
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modalContainer .title {
  text-align: center;
  font-size: 40px;
}

.modalContainer .loginText {
  text-align: center;
}

#tempname{
  color: white;
  /* transform: translateX(1250px); */
  z-index: 1;
}

/* .homeButton {
  text-decoration: none; */
  /* color: greenyellow; */
  /* border: 0px solid #fff;
  border-radius: 25px;
  padding: 10px 20px;
  transition: all 0.3s ease-in-out;
} */


.myGamesButton {
  text-decoration: none;
  /* color: greenyellow; */
  border: 0px solid #fff;
  border-radius: 25px;
  padding: 10px 20px;
  transition: all 0.3s ease-in-out;
}

.myGamesButton:hover {
  background-color: #fff;
  color: #333;
  box-shadow: 0px 0px 10px #fff;
}


.homeButton:hover {
  background-color: #fff;
  background-image: url(https://i.pinimg.com/originals/c3/ae/8b/c3ae8b679648b7be5101cb3480ea5cfd.gif);

  color: #333;
  box-shadow: 0px 0px 10px #fff;
}
/* ... */

